--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Version 0.4 - 15 January 2012
+
+* Support for models that have a "3D controller" instead of "VGA compatible
+  controller".
+
 Version 0.3 - 14 January 2012
 
 * Support for models that have the nvidia DSM method on the integrated Intel
