--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,5 @@
+* Improved compatibility with older DKMS versions.
+
 Version 0.4.2 - 26 April 2012
 
 * Fixed a documentation error on unload_state.
